--- a/tabela/index.html
+++ b/tabela/index.html
@@ -118,7 +118,7 @@
             <td class="cor"></td>            
         
         <table>
-            <caption class="captiona">GEOGRAFIA VESPERTINO</caption>
+            <caption class="captiona">ENSINO RELIGIOSO VESPERTINO</caption>
             <tr>
                 <td></td>
                 <th id="shadow" class="cor2">Segunda</th>
