--- a/exercicios/ex027/flex003/index.html
+++ b/exercicios/ex027/flex003/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexble Box</title>
+    <title>Flexible Box</title>
     <style>
         div.container {
             background-color: lightsalmon;
-            height: 100px;
             display: flex;
-           flex-flow: column wrap;
+            /* esse é o modelo padrão -> flex-direction: row;
+            flex-wrap: nowrap;*/
+            /* Abaixo o shotcut desse código -> flex-direction: row-reverse;
+            flex-wrap: wrap-reverse;*/
+            height: 100px;
+            flex-flow: column wrap;
+
         }
         div.item {
-            background-color: lightblue;
-            border: 1px solid black;
-            text-align: center; 
-            flex: auto;          
-          
-
-            
+            background-color: lightskyblue;
+            border: 1px solid black;            
+            text-align: center;
+            flex: auto;
         }
     </style>
 </head>
@@ -30,6 +32,7 @@
         <div class="item">Exemplo de bloco D</div>
         <div class="item">Exemplo de bloco E</div>
         <div class="item">Exemplo de bloco F</div>
-        <div class="item">Exemplo de bloco G</div>    
+        <div class="item">Exemplo de bloco G</div>
+    </div>
 </body>
 </html>
