--- a/exercicios/ex027/flex004/index.html
+++ b/exercicios/ex027/flex004/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexble Box</title>
+    <title>Flexible Box</title>
     <style>
         div.container {
             background-color: lightsalmon;
-
+            height: 300px;
             display: flex;
-            flex-direction: column-reverse;
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            align-items: stretch;
         }
         div.item {
-            background-color: lightblue;
+            background-color: lightskyblue;
             border: 1px solid black;
-            text-align: center;
-            padding: 10px;
-
             
+            text-align: center;
         }
     </style>
 </head>
@@ -29,6 +29,7 @@
         <div class="item">D</div>
         <div class="item">E</div>
         <div class="item">F</div>
-        <div class="item">G</div>    
+        <div class="item">G</div>
+    </div>
 </body>
 </html>
