--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -9,7 +9,7 @@
             height: 100vh;            background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat;
+            background-repeat: repeat-y;
             background-size: cover
         }
         main{
