--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,15 +6,24 @@
     <title>Document</title> <style>
         body {
 
-            height: 100vh;            background-color: black;
+            height: 100vh;            
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat-y;
-            background-size: cover
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment:scroll;*/
+
+
+            /*Shorthand - background
+            color > image > position > repeat > [size]
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             text-align: justify;
