Testando a rolagem lateral

--- a/exercicios/ex027/flex013-menu-flexbox/index.html
+++ b/exercicios/ex027/flex013-menu-flexbox/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Flexbox</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css" media="screen and  (max-width: 570px)">
+    <link rel="stylesheet" href="mobile.css" media="screen and  (max-width: 750px)">
 </head>
 <body>
     <header>
         <h1>PROFESSOR HÉLVIO</h1>
         <nav>
-            <a href="#">Opção 1</a>
-            <a href="#">Opção 2</a>
-            <a href="#">Opção 3</a>
-            <a href="#">Opção 4</a>
-            <a href="#">Opção 5</a>
-            <a href="#">Opção 6</a>
+            <a href="#">6º ano 1</a>
+            <a href="#">6º ano 3</a>
+            <a href="#">7º ano 1</a>
+            <a href="#">7º ano 2</a>
+            <a href="#">8º ano 1</a>
+            <a href="#">8º ano 3</a>
+            <a href="#">9º ano 1</a>
+            <a href="#">9º ano 2</a>
         </nav>
     </header>
     <main>
