--- a/tabela/index.html
+++ b/tabela/index.html
@@ -8,8 +8,9 @@
     <style>
        body { 
             font-family: Arial, Helvetica, sans-serif;
+            
         }
-        table {
+        table {            
             width: 600px;
             height: 300px;
             border-collapse: collapse;
@@ -56,7 +57,7 @@
     <table>
         <caption>HORÁRIO DE AULAS</caption>
        <tr>
-           <td></td>
+           <td id="shadow" class="cor2"></td>
            <th id="shadow" class="cor2">Segunda</th>
            <th id="shadow" class="cor2">Terça</th>
            <th id="shadow" class="cor2">Quarta</th>
@@ -65,16 +66,16 @@
        </tr>
        <tr>
            <td>1º</td>
-           <td class="cor"></td>
+           <td>6º 1 ER</td>
            <td>8º 1</td>
            <td>9º 2</td>
-           <td>7º 3</td>
+           <td>7º 2</td>
            <td>9º 1</td>
        </tr>
        <tr>
            <td>2º</td>
-           <td>7º 3</td>
-           <td>7º 3</td>
+           <td>7º 2</td>
+           <td>7º 2</td>
            <td>9º 1</td>
            <td>6º 1</td>
            <td>6º 1</td>
