--- a/desafios/d12/index.html
+++ b/desafios/d12/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
         
     </header>
 
-<section>
+<section class="normal">
     <p>
         Estou ficando cansado <br>
         Da tal tecnologia<br>
@@ -26,7 +27,7 @@
 
 
 
-<section>
+<section class="imagem">
     <p>
         Não é mais como era antes<br>
         É tudo abreviado<br>
@@ -40,7 +41,7 @@
 
 
 
-<section>
+<section class="normal">
     <p>
         Arroba agora não pesa <br>
         É parte de um endereço<br>
@@ -64,7 +65,7 @@
 
 
 <br>
-<section>
+<section class="imagem">
     <p>
         Tenho saudade das cartas<br>
         Escritas com a própria mão <br>
@@ -78,7 +79,7 @@
 
 
 
-<section>
+<section class="normal">
     <p>
         Agora, escrevo e envio<br>
         Chegando na mesma hora<br>
@@ -100,7 +101,7 @@
     </p>
 </section>
 <footer>
-    <p>Site criado por <a href="https://helviosouza.github.io/html-css3/tabela/" target="_blank">Hélvio Souza</a> para <a href="">Professor Hélvio Souza</a></p>
+    <p>Site criado por <a href="https://helviosouza.github.io/html-css3/tabela/" target="_blank">Hélvio Souza</a> para <a href="https://github.com/HELVIOSOUZA/html-css3" target="_blank">Professor Hélvio Souza</a></p>
 </footer>
 </body>
 </html>
