--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -20,10 +20,10 @@
         th, td {
             border: 1px solid black;
         }
-        col.cnome {
+       /* col.cnome {
             background-color: chartreuse;
 
-        }
+        }*/
         .amarelo {
             background-color: yellow;
         }
