--- a/tabela/index.html
+++ b/tabela/index.html
@@ -66,44 +66,44 @@
        </tr>
        <tr>
            <td>1º</td>
-           <td>6º 1 ER</td>
-           <td>8º 1</td>
-           <td>9º 2</td>
+           <td class="cor2"></td>
+           <td>7º 1</td>
            <td>7º 2</td>
-           <td>9º 1</td>
+           <td>8º 1</td>
+           <td>8º 2</td>
        </tr>
        <tr>
            <td>2º</td>
-           <td>7º 2</td>
-           <td>7º 2</td>
-           <td>9º 1</td>
            <td>6º 1</td>
            <td>6º 1</td>
+           <td>8º 2</td>
+           <td>6º 1</td>
+           <td>7º 2</td>
        </tr>
        <tr>
            <td>3º</td>
-           <td>7º 1</td>
-           <td>8º 3</td>
-           <td>7º 1</td>
-           <td>7º 1</td>
            <td>8º 1</td>
+           <td>8º 2</td>
+           <td>7º 1</td>
+           <td>6º 2</td>
+           <td>9º 1</td>
        </tr>
        <tr>
            <td>4º</td>
+           <td>6º 2</td>
            <td>9º 2</td>
+           <td>6º 6</td>
            <td>9º 1</td>
-           <td>8º 1</td>
-           <td>6º 3</td>
-           <td>6º 3</td>
+           <td>9º 2</td>
 
        </tr>
        <tr>
            <td>5º</td>
-           <td>6º 3 </td>
-           <td>6º 1</td>
-           <td>8º 3</td>
+           <td>7º 2 </td>
+           <td>9º 1</td>
            <td>9º 2</td>
-           <td>8º 3</td>
+           <td>7º 1</td>
+           <td>8º 1</td>
            
         </tr>
         </table>
